test/isabelle/negative-tests/module-nested.p
module P1 {
  module P2 {
    c: int = 0
  }
}